--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,10 @@
 }
 
 html {
-  font-size: 62.5%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  font-size: 62.5%;
+
 }
 
 body {
@@ -245,6 +246,10 @@ body {
   padding: 1.25rem 3rem !important;
   font-size: 1.4rem !important;
 }
+.btn--xsmall {
+  padding: 1rem 1.5rem !important;
+  font-size: 1.4rem !important;
+}
 
 .btn-small,
 .btn-small:link,
@@ -330,24 +335,17 @@ body {
     max-height: 30px;
     
   }
+  .header__logo img{
+    height: 2rem;
+    
+  }
   
 }
 
 .section-header {
   position: relative;
   height: 38vw;
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% calc(100% - var(--section-rotate)),
-    0 100%
-  );
-  -webkit-clip-path: polygon(
-    0 0,
-    100% 0,
-    100% calc(100% - var(--section-rotate)),
-    0 100%
-  );
+
 }
 
 .header__hero {
@@ -577,18 +575,7 @@ body {
     to(#28b487)
   );
   background: linear-gradient(to right bottom, #7dd56f, #28b487);
-  clip-path: polygon(
-    0 var(--section-rotate),
-    100% 0,
-    100% calc(100% - var(--section-rotate)),
-    0 100%
-  );
-  -webkit-clip-path: polygon(
-    0 var(--section-rotate),
-    100% 0,
-    100% calc(100% - var(--section-rotate)),
-    0 100%
-  );
+
 }
 
 .reviews {
@@ -917,7 +904,6 @@ body {
 @media only screen and (max-width: 37.5em) {
   .nav__el:not(:last-child) {
     margin-right: 0;
-    margin-bottom: 1.2rem;
   }
 }
 .nav__el:focus {
@@ -1314,33 +1300,26 @@ body {
 }
 
 
-  .section-reviews::-webkit-scrollbar {
-    width: 8px;
+  .reviews::-webkit-scrollbar {
+    height: 6px;
   }
   
   /* Track */
-  .section-reviews::-webkit-scrollbar-track {
+  .reviews::-webkit-scrollbar-track {
     background: rgb(165, 164, 164);
     
   }
   
   /* Handle */
-  .section-reviews::-webkit-scrollbar-thumb {
+  .reviews::-webkit-scrollbar-thumb {
     background: #555;  
     border-radius: 10px;
   }
   
   /* Handle on hover */
-  .section-reviews::-webkit-scrollbar-thumb:hover {
+  .reviews::-webkit-scrollbar-thumb:hover {
     background: #555;
   }
 
 
 
-  .loader-container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-items: center;
-    align-items: center;
-  }
